1998-11-07  Jeff Garzik  <jgarzik@pobox.com>

	* Makefile.am, libgnomeui.h: removed gnome-lamp.[ch]
	* stock_demo.c: removed ifdef'd gnome_lamp widget code
	* winhints_demo.c: made authors var const-correct
	* gnome-lamp.[ch]: removed (general consensus considers
	  gnome-lamp unused and ugly)

1998-11-05  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-icon-item.[ch] (gnome_icon_text_item_get_text): New public
	function to query the text from the icon item.

	* gnome-icon-list.c (text_changed): Use gnome_icon_text_item_get_text().

1998-11-05  Chris Lahey  <clahey@umich.edu>

	* pixmaps/Makefile.am (stock_images): 
	* gnome-stock.c: 
	* gnome-stock.h: Added GNOME_STOCK_PIXMAP_INDEX, a small pile of
	documents.

	* pixmaps/stock_index.png: Added this file.  The image for
	GNOME_STOCK_PIXMAP_INDEX.

	* gnome-app.c (gnome_app_set_toolbar): Removed an incorrect #ifdef
	to get flat toolbars to work.

1998-11-05  Felix Bellaby <felix@pooh.u-net.com>

	* gnome-client.c (options): Added CBFLAGS to make connection to
	master_client.

1998-11-04  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-net.c (make_inetaddr): Use memset/memcpy rather than
	bzero/bcopy. 
	(gnomesupport.h): Include.
	(max_sockets): Specify `int' type.

1998-11-01  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gtkcauldron.c: Make private functions static.

1998-11-04  Havoc Pennington  <hp@pobox.com>

	* gnome-guru.c, gnome-guru.h: New widget, a simple-minded wizard
	widget.  
	* gtkrc: Add a style for the title of each page in the GnomeGuru.
	It only works with the standalone guru though, not the
	guru-in-a-dialog. See test-gnome for demo. weird.
	* libgnomeui.h, Makefile.am: added.
	* gnome-icon-sel.c: The type of parent_class was wrong.

1998-11-04  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-icon-item.h (GnomeIconTextItemClass): Added an
	"editing_started" signal, too.

	* gnome-icon-item.c (iti_class_init): Create the new signal.